# permuted_brunner_munzel

./: README.md  pyproject.toml  setup.py
permuted_brunnermunzel/: __init__.py  brunnermunzel_test.py
tests/: test_permuted_brunnermunzel.py
